# map-reduce

./: Cargo.toml  Makefile
chunkify/: Cargo.toml
chunkify/chunks/: chunk-11.txt  chunk-12.txt  chunk-17.txt  chunk-2.txt  chunk-21.txt  chunk-23.txt  chunk-27.txt
chunkify/src/: main.rs
input/dfs/: chunk-0.txt  chunk-1.txt  chunk-15.txt  chunk-30.txt  chunk-31.txt  chunk-32.txt  chunk-4.txt  chunk-7.txt  chunk-8.txt
input/worker-0/: chunk-14.txt  chunk-24.txt  chunk-29.txt  chunk-5.txt  chunk-9.txt
input/worker-1/: chunk-13.txt  chunk-16.txt  chunk-18.txt  chunk-19.txt  chunk-25.txt  chunk-28.txt  chunk-3.txt  chunk-6.txt
input/worker-2/: chunk-10.txt  chunk-20.txt  chunk-22.txt  chunk-26.txt
map-reduce-core/: Cargo.toml  build.rs
map-reduce-core/src/: lib.rs
map-reduce-master/: Cargo.toml
map-reduce-master/src/: config.rs  dfs.rs  input_file_chunk.rs  main.rs  master.rs  output_file_chunk.rs  state.rs  task.rs
map-reduce-worker/: Cargo.toml
map-reduce-worker/src/: error_tracker.rs  file_system.rs  heartbeat.rs  main.rs  shutdown_manager.rs  shutdown_signal.rs  task_puller.rs  worker.rs  worker_config.rs  worker_server.rs
map-reduce-worker/src/shutdown/: mod.rs  shutdown_manager.rs  shutdown_reason.rs
proto/: mr.proto
