[package]
name = "map-reduce-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
map-reduce-core = { path = "../map-reduce-core" }
prost = "0.13.4"
prost-types = "0.13.4"
tokio = { version = "1.37.0", features = ["full"] }
tonic = "0.12.3"
