[package]
name = "map-reduce-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.10.1"
futures-util = "0.3.31"
map-reduce-core = { path = "../map-reduce-core" }
prost = "0.13.4"
prost-types = "0.13.4"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
tokio-util = "0.7.13"
tonic = "0.12.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
